Updated active state to have correct colour contrast

--- a/css/mui-tokens.css
+++ b/css/mui-tokens.css
@@ -334,12 +334,13 @@ html[data-theme='light'] {
   /* Addon */
   --addon-background: var(--grey-100);
   /* Tabs */
-  --tab-background: var(--grey-100);
-  --tab-background-active: var(--white);
+  --tab-background: var(--white);
+  --tab-background-active: var(--grey-100);
   --tab-text-color: var(--grey-700);
   --tab-icon: var(--grey-700);
   --tab-icon-active: var(--black);
   --tab-text-color-active: var(--black);
+  --tab-inset-active: var(--white);
 }
 
 /* ==================================================================================================== */
@@ -481,12 +482,13 @@ html[data-theme='dark'] {
   /* Addon */
   --addon-background: var(--grey-1000);
   /* Tabs */
-  --tab-background: var(--grey-1000);
-  --tab-background-active: var(--black);
-  --tab-text-color: var(--grey-300);
-  --tab-icon: var(--grey-300);
+  --tab-background: var(--grey-1100);
+  --tab-background-active: var(--grey-900);
+  --tab-text-color: var(--grey-400);
+  --tab-icon: var(--grey-400);
   --tab-icon-active: var(--white);
   --tab-text-color-active: var(--white);
+  --tab-inset-active: var(--black);
 }
 
 /* ==================================================================================================== */
